--- a/ProAgilApp/src/app/Eventos/Eventos.component.html
+++ b/ProAgilApp/src/app/Eventos/Eventos.component.html
@@ -2,8 +2,8 @@
   Eventos works!
 </p>
 <div *ngFor="let item of eventos">
-   Local : {{item.Local}}
+   Local : {{item.local}}
    <br>
-   Tema : {{item.Tema}}
+   Tema : {{item.tema}}
    <hr>
 </div>
