--- a/ProAgilApp/src/app/app.component.html
+++ b/ProAgilApp/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div style="text-align: center;">
+<div class="container text-center">
       <H1>Welcome to {{title}}</H1>
+      <app-Eventos></app-Eventos>
 </div>
-<app-Eventos><app-Eventos>
+
 <router-outlet></router-outlet>
