--- a/ProAgilApp/src/app/Eventos/Eventos.component.html
+++ b/ProAgilApp/src/app/Eventos/Eventos.component.html
@@ -1,9 +1,30 @@
-<p>
-  Eventos works!
-</p>
-<div *ngFor="let item of eventos">
-   Local : {{item.local}}
-   <br>
-   Tema : {{item.tema}}
-   <hr>
-</div>
+<form class="form-inline">
+   <div class="form-group mb-2">
+      <input type="text" class="form-control mb-2" placeholder="Buscar">
+      <button class="btn btn-outline-success">Buscar</button>
+   </div>
+</form>
+<table class="table table-striped">
+   <thead class="thead-dark">
+      <tr>
+         <th>#</th>
+         <th>Tema</th>
+         <th>Local</th>
+         <th>Data</th>
+         <th>Qtd Pessoas</th>
+         <th>Lote</th>
+         <th>Opções</th>
+      </tr>
+   </thead>
+   <tbody>
+      <tr>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+      </tr>
+   </tbody>
+</table>
