--- a/ProAgilApp/src/app/app.component.html
+++ b/ProAgilApp/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="container text-center">
+<app-nav> </app-nav>
+<div class="container">
+      <br/><br/><br/>
       <H1>Welcome to {{title}}</H1>
       <app-Eventos></app-Eventos>
 </div>
-
 <router-outlet></router-outlet>
