--- a/ProAgilApp/src/app/Eventos/Eventos.component.html
+++ b/ProAgilApp/src/app/Eventos/Eventos.component.html
@@ -7,6 +7,12 @@
 <table class="table table-striped">
    <thead class="thead-dark">
       <tr>
+         <th>
+            <button class="btn btn-outline-primary"
+            (click) = "alternarImagem()">
+               Mostrar Imagem
+            </button>
+         </th>
          <th>#</th>
          <th>Tema</th>
          <th>Local</th>
@@ -16,15 +22,31 @@
          <th>Opções</th>
       </tr>
    </thead>
-   <tbody>
-      <tr>
-         <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
-         <td></td>
+   <tbody *ngIf="eventos && eventos.length">
+      <tr *ngFor="let evento of eventos">
+         <td>
+            <img *ngIf="mostrarImagem"
+             src="http://localhost:5000/img/{{evento.imagemUrl}}"
+            [style.width.px]="imagemLargura"
+            [style.margin.px] ="imagemMargen">
+         </td>
+         <td>{{evento.eventoId}}</td>
+         <td>{{evento.tema}}</td>
+         <td>{{evento.local}}</td>
+         <td>{{evento.dataEvento}}</td>
+         <td>{{evento.qtdPessoas}}</td>
+         <td>{{evento.lote}}</td>
+         <td>
+            <button class="btn btn-success"></button>
+            <button class="btn btn-danger"></button>
+         </td>
       </tr>
    </tbody>
+   <tfoot *ngIf="!eventos.length">
+      <tr>
+         <td colspan="7" class="text-center">
+            <h3>Nenhum evento encontrado ! </h3>
+         </td>         
+      </tr>
+   </tfoot>
 </table>
