--- a/ProAgilApp/src/app/Eventos/Eventos.component.html
+++ b/ProAgilApp/src/app/Eventos/Eventos.component.html
@@ -1,9 +1,12 @@
-<form class="form-inline">
+<div class="form-inline">
    <div class="form-group mb-2">
-      <input type="text" class="form-control mb-2" placeholder="Buscar">
-      <button class="btn btn-outline-success">Buscar</button>
+     <label class="mr-2"> Filtro:</label> <input type="text" 
+      class="form-control mr-2" 
+      placeholder="Buscar"
+      [(ngModel)]="filtroLista">
    </div>
-</form>
+</div>
+<h3>Filtro:{{filtroLista}}</h3>
 <table class="table table-striped">
    <thead class="thead-dark">
       <tr>
@@ -23,7 +26,7 @@
       </tr>
    </thead>
    <tbody *ngIf="eventos && eventos.length">
-      <tr *ngFor="let evento of eventos">
+      <tr *ngFor="let evento of eventosFiltrados">
          <td>
             <img *ngIf="mostrarImagem"
              src="http://localhost:5000/img/{{evento.imagemUrl}}"
@@ -35,7 +38,7 @@
          <td>{{evento.local}}</td>
          <td>{{evento.dataEvento}}</td>
          <td>{{evento.qtdPessoas}}</td>
-         <td>{{evento.lote}}</td>
+         <td>{{evento.lote | uppercase}}</td>
          <td>
             <button class="btn btn-success"></button>
             <button class="btn btn-danger"></button>
